syntax = "proto3";

package github.com.c_4u;

option go_package = "/protofiles;pb";

import "google/protobuf/timestamp.proto";

message CreateEmployeeRequest {
    Employee employee = 1;
}

message CreateEmployeeResponse {
    string id = 1;
}

message FindEmployeeRequest {
    string id = 1;
}

message FindEmployeeResponse {
    Employee employee = 1;
}

message FilterEmployees {
    string first_name = 1;
    string last_name = 2;
    int64 page_size = 3;
    string page_token = 4;
}

message SearchEmployeesRequest {
    FilterEmployees filter = 1;
}

message SearchEmployeesResponse {
    repeated Employee employees = 1;
    string next_page_token = 2;
}

message Employee {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string pis = 5;
    string cpf = 6;
    bool enabled = 7;
    string company_id = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message UpdateEmployeeRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message StatusResponse {
    uint32 code = 1;
    string message = 2;
    string error = 3;
}

service EmployeeService {
    rpc CreateEmployee (CreateEmployeeRequest) returns (CreateEmployeeResponse);
    rpc FindEmployee (FindEmployeeRequest) returns (FindEmployeeResponse);
    rpc SearchEmployees (SearchEmployeesRequest) returns (SearchEmployeesResponse);
    rpc UpdateEmployee (UpdateEmployeeRequest) returns (StatusResponse);
}
